--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,19 +1,19 @@
 <div class="card-container">
-  <md-card x-large class="sample-content">Your Content Here</md-card>
+  <md-card x-large class="sample-content">f9 ng</md-card>
   <md-card>
-    <md-card-title>Local State</md-card-title>
+    <md-card-title>For API Call</md-card-title>
     <md-card-content>
 
       <form (ngSubmit)="submitState(localState.value)" autocomplete="off">
 
         <md-input
-          placeholder="Submit Local State to App State"
+          placeholder="Submit Value"
           [value]="localState.value"
           (input)="localState.value = $event.target.value"
           autofocus>
         </md-input>
 
-        <button md-raised-button color="primary">Submit Value</button>
+        <button md-raised-button color="primary">Submit</button>
       </form>
       <!--
         <input type="text" [value]="localState.value" (input)="localState.value = $event.target.value" autofocus>
