--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,8 +1,9 @@
 <div class="card-container">
-  <md-card x-large class="sample-content">f9 ng</md-card>
   <md-card>
     <md-card-title>For API Call</md-card-title>
+    <about></about>
     <md-card-content>
+
 
       <form (ngSubmit)="submitState(localState.value)" autocomplete="off">
 
