--- a/src/app/image-loader/image-loader.html
+++ b/src/app/image-loader/image-loader.html
@@ -2,18 +2,32 @@
     <md-card>
         <md-card-title>Basic Request</md-card-title>
         <button class="md-raised md-primary md-button"
-                   type="button"
-                (click)="makeRequest()">
-                <span>Make Request</span>
+                type="button"
+                (click)="makeRequest( search.value )">
+            <span>Make Request</span>
         </button>
-        <div *ngIf = "loading">loading...</div>
+        <div *ngIf="loading">loading...</div>
+
+        <input #search placeholder="search"/>
+
+    </md-card>
 
 
 
-        <div *ngFor="let artObject of artObjects">
-            {{ artObject.name}} id {{ artObject.id }}
-        </div>
 
+
+
+    <md-card *ngFor="let artObject of artObjects" style="outline: solid 1px darkred; max-height: 300px; overflow: hidden;">
+        <md-card-title>
+            <md-card-title-text>
+                <span class="md-headline">{{artObject.title}}</span>
+            </md-card-title-text>
+            <md-card-title-media>
+                <div class="md-media-sm card-media">
+                    <img src="{{artObject.headerImage.url}}" class="md-card-image md-media-sm" alt="image caption">
+                </div>
+            </md-card-title-media>
+        </md-card-title>
 
     </md-card>
 </div>
