- Add basic styles

--- a/src/app/image-loader/image-loader.html
+++ b/src/app/image-loader/image-loader.html
@@ -2,7 +2,6 @@
     <md-card>
         <md-card-title>Basic Request</md-card-title>
 
-
         <button md-raised-button
                 color="primary"
                 (click)="makeRequest( search.value )">Submit
@@ -15,66 +14,22 @@
 </div>
 
 
-<div class="card-container">
-    <md-card>
-        <md-card-title>Title</md-card-title>
-        <about>Info</about>
-        <md-card-content>
-
-            content
-
-        </md-card-content>
-    </md-card>
-
-</div>
-
-
-<md-card>
-    <md-card-header>
-        <md-card-avatar>
-            <img src="img/logo.svg">
-        </md-card-avatar>
-        <md-card-header-text>
-            <span class="md-title">Angular</span>
-            <span class="md-subhead">Material</span>
-        </md-card-header-text>
-    </md-card-header>
-    <img ng-src="" class="md-card-image" alt="Washed Out">
-    <md-card-title>
-        <md-card-title-text>
-            <span class="md-headline">Card header</span>
-        </md-card-title-text>
-    </md-card-title>
-    <md-card-content>
-        <p>
-            The titles of Washed Out's breakthrough song and the first single from Paracosm share the
-            two most important words in Ernest Greene's musical language: feel it. It's a simple request, as well...
-        </p>
-    </md-card-content>
-</md-card>
-
 
 <div class="card-container">
-    <md-card *ngFor="let artObject of artObjects"
-             style="outline: solid 1px darkred; max-height: 300px; overflow: hidden;">
-        <md-card-header md-ink-ripple>
-            <md-card-avatar>
-                <img src="img/logo.svg">
-            </md-card-avatar>
-            <md-card-header-text>
-                <span class="md-title">Angular</span>
-                <span class="md-subhead">Material</span>
-            </md-card-header-text>
-        </md-card-header>
-        <img src="{{artObject.headerImage.url}}" class="md-card-image" alt="image caption">
+    <md-card class="art-object"
+            *ngFor="let artObject of artObjects"
+            >
+        <div class="thumbnail">
+            <img src="{{artObject.webImage.url}}" class="md-card-thumbnail" alt="image caption">
+        </div>
         <md-card-title>
             <md-card-title-text>
-                <span class="md-headline">Card header</span>
+                <span class="md-headline">{{artObject.title}}</span>
             </md-card-title-text>
         </md-card-title>
         <md-card-title>
             <md-card-content>
-                <p>Stuff..</p>
+                <p>{{artObject.principalOrFirstMaker}}</p>
             </md-card-content>
         </md-card-title>
     </md-card>
